modules/gdscript/tests/scripts/analyzer/errors/local_const_as_type_use_not_const.gd
enum MyEnum {}

func test():
	var E = MyEnum
	var e: E
